--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -4,7 +4,7 @@
 <header style="text-align: center; margin:5%">
   <h1 style="font-size: 6em">Purple Fox Karaoke Club</h1>
 
-  <img id="logo" style="max-height: 10em" alt="Brand" src="http://www.moderntots.com/media/catalog/product/cache/1/image/655x/040ec09b1e35df139433887a97daa66f/p/u/purple_fox.jpg">
+  <img id="logo" style="max-height: 10em" alt="Brand" src="http://i.imgur.com/xIFrwUi.png">
 </header>
 
 
