--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -57,8 +57,8 @@
     <nav class="navbar navbar-inverse" role="navigation" style="padding-right: 2em">
         <div class="row">
             <div class="col-md-6">
-            	<a class="navbar-brand" href="/">Purple Fox Karaoke Club</a>
-						</div>
+            	<a class="navbar-brand" href="/"><img src="http://i.imgur.com/pXx7ihe.png" width="73em" height="50em" style="display: inline-block; margin-bottom: 0.5em; margin-top: -0.5em"> Purple Fox Karaoke Club</a>
+			</div>
  						<div class="col-md-6">
 							<div ng-if="!main.loggedIn">
                 	<form class="navbar-form navbar-right" role="login" >
