--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -44,7 +44,7 @@
     <!-- services -->
     <script src="app/services/userService.js"></script>
 	<script src="app/services/authService.js"></script>
-
+	<script src="app/services/bookingService.js"></script>
 
     <!-- main Angular app files -->
     <script src="app/app.routes.js"></script>
