got password reset to send emails

--- a/public/app/views/pages/pwResetForgot.html
+++ b/public/app/views/pages/pwResetForgot.html
@@ -4,12 +4,12 @@
       </div>
     	
 
-     <form ng-submit="pwResetForgot.sendToken()">
+     <form ng-submit="pwReset.sendToken()">
 			<div class="row">
       	<div class="col-sm-6">
 					<div class="form-group">
 				  		<label for="email">Email Address</label>
-				    	<input type="email" class="form-control" placeholder="Email" ng-model="user.userData.email">
+				    	<input type="email" class="form-control" placeholder="Email" ng-model="pwReset.userData.email">
 					</div>
 				</div>
 			</div>
