--- a/public/app/views/pages/users/all.html
+++ b/public/app/views/pages/users/all.html
@@ -23,6 +23,10 @@
 			<th>_id</th>
 			<th>Name</th>
 			<th>Username</th>
+			<th>Email</th>
+			<th>Phone</th>
+			<th>Age</th>
+			<th>Address</th>
 			<th class="col-sm-2"></th>
 		</tr>
 	</thead>
@@ -31,9 +35,13 @@
 			<td>{{ person._id }}</td>
 			<td>{{ person.name }}</td>
 			<td>{{ person.username }}</td>
+			<td>{{ person.email }}</td>
+			<td>{{ person.phone_number }}</td>
+			<td>{{ person.age }}</td>
+			<td>{{ person.address }}</td>
 			<td class="col-sm-2">
-				<a ng-href="/users/single/edit/{{ person._id }}" class="btn btn-danger">Edit</a>
-				<a href="#" ng-click="admin.deleteUser(person._id)" class="btn btn-primary">Delete</a>
+				<a ng-href="/users/{{ person._id }}/edit" class="btn btn-danger">Edit</a>
+				<a href="/users/{{ person._id }}/delete" class="btn btn-primary">Delete</a>
 			</td>
 		</tr>
 	</tbody>
