--- a/public/app/views/pages/pwResetForgot.html
+++ b/public/app/views/pages/pwResetForgot.html
@@ -14,10 +14,14 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-6">
-					<div class="container">
+				<div class="col-sm-12">
+						<div class="alert alert-danger" ng-if="pwReset.err">
+								{{ pwReset.err }}
+						</div>
+						<div class="alert alert-success" ng-if="pwReset.success">
+								{{ pwReset.success }}
+						</div>
 		  			<button type="submit" class="btn btn-success">Reset Password</button>
-		  		</div>
 				</div>
 			</div>
 		</form>
