pwReset now working

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -111,7 +111,7 @@
     <!-- FOOTER -->
 	<nav class="navbar navbar-inverse navbar-fixed-bottom">
 		<div class="container">
-			<a class="navbar-text" href="/contact" class="navbar-link">Contact</a></p>
+			<a class="navbar-text" href="/contact" class="navbar-link">Contact</a>
 		</div>
 	</nav>
 	
