profile page fix

--- a/public/app/views/pages/users/userForm.html
+++ b/public/app/views/pages/users/userForm.html
@@ -63,7 +63,7 @@
 				  	</div>
 				  	<div ng-if="user.type == 'edit'">
 				  		<button type="submit" class="btn btn-success">Save Changes</button>
-				  		<a href="/users/:user_id"><button class="btn btn-default">Cancel</button></a>
+				  		<a href="/users/{{ main.user._id }}/"><button class="btn btn-default">Cancel</button></a>
 				  	</div>
 				</div>
 			</div>
