Added manageBooking page

--- a/public/app/views/pages/users/single.html
+++ b/public/app/views/pages/users/single.html
@@ -22,7 +22,7 @@
         <div class="container">
         	<a class="btn btn-default" href="users/{{ user.userData._id }}/edit">Edit Profile</a>
         	<a class="btn btn-default" href="users/{{ user.userData._id }}/delete">Delete Account</a>
-        	<a class="btn btn-default" href="users/{{ user.userData._id }}/bookings">Your Bookings</a>
+        	<a class="btn btn-default" href="bookings/{{ main.user._id }}">Your Bookings</a>
         </div>
       
     </div>
