changed home page Profile button, added registration and edit user confimation messages

--- a/public/app/views/pages/deleteUser.html
+++ b/public/app/views/pages/deleteUser.html
@@ -7,7 +7,7 @@
 			<input type="password" class="form-control" style="width:300px"placeholder="Enter your password" ng-model="main.password">
 			<br/>
 			<button type="submit" class="btn btn-danger">Delete</button>
-			<a href="/"><button class="btn btn-default">Cancel</button></a>
+			<a href="/users/{{ main.user._id }}/"><button class="btn btn-default">Cancel</button></a>
 		</form>
 	</div>
 	
