--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -12,12 +12,12 @@
 
 	<div class="row" align="center">
 	  <div class="col-xs-6">
-	  	<a href="/availability" type="button" class="btn btn-block btn-default btn-lg">Availability</a>
-	  	<a href="/booking" type="button" class="btn btn-block btn-default btn-lg">Booking</a>
+	  	<a href="/availability/" type="button" class="btn btn-block btn-default btn-lg">Availability</a>
+	  	<a href="/booking/" type="button" class="btn btn-block btn-default btn-lg">Booking</a>
 	  </div>
 	  <div class="col-xs-6">
-			<a href="/users" type="button" class="btn btn-block btn-default btn-lg">Administrator</a>
-			<a href="/users/:user_id" type="button" class="btn btn-block btn-default btn-lg">Account</a>
+			<a href="/users/" type="button" class="btn btn-block btn-default btn-lg">Administrator</a>
+			<a href="/users/{{ main.user._id }}/" type="button" class="btn btn-block btn-default btn-lg">Profile</a>
 	  </div>
 	</div>
 
