changes to admin page

--- a/public/app/views/pages/users/all.html
+++ b/public/app/views/pages/users/all.html
@@ -41,7 +41,7 @@
 			<td>{{ person.address }}</td>
 			<td class="col-sm-2">
 				<a ng-href="/users/{{ person._id }}/edit" class="btn btn-danger">Edit</a>
-				<a href="/users/{{ person._id }}/delete" class="btn btn-primary">Delete</a>
+				<a href="bookings/{{ person._id }}" class="btn btn-primary">View Bookings</a>
 			</td>
 		</tr>
 	</tbody>
