create booking works

--- a/public/app/views/pages/booking.html
+++ b/public/app/views/pages/booking.html
@@ -20,8 +20,8 @@
         			<div class="form-group">
         				<label for="room">Room</label>
         				<select name="Room" class="form-control" ng-model="booking.bookingData.room">
-        					<option value="Room 1">Room 1</option>
-        					<option value="Room 2">Room 2</option>
+        					<option value="1">Room 1</option>
+        					<option value="2">Room 2</option>
         				</select>
         			</div>
 
