Added login.html which is not currently connected to anything, fixed (?) CSS file reading, added comment to contact.html.

--- a/public/app/views/pages/contact.html
+++ b/public/app/views/pages/contact.html
@@ -9,6 +9,7 @@
 			<div class="col-sm-4">
 				<div class="form-group">
 					<label class="return-email">Return Email</label>
+					<!-- contactUs.email is not actually a function yet -->
 					<input type="text" class="form-control" placeholder="Your Email" ng-model="contactUs.email">
 				</div>
 				<div class="form-group">
