--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -26,7 +26,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <!-- LOAD CUSTOM CSS -->
-    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="stylesheet" href="assets/css/main.css">
 
     
     <!-- load angular and angular route via CDN -->
