implemented some page permissions

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -66,12 +66,12 @@
                         	<input type="text" class="form-control" placeholder="Username" ng-model="main.loginData.username">
                         	<input type="password" class="form-control" placeholder="Password" ng-model="main.loginData.password">
                     	</div>
-                  	  <button type="submit" class="btn btn-sm btn-default">Login</button>
+                  	  <button type="submit" class="btn btn-sm btn-default">Login</bgitutton>
                 	</form>
 							</div>
 							<div ng-if="main.loggedIn">
-                <p class="navbar-text navbar-right" style="margin-right:2em">Signed in as: <a href="/users/{{ main.user._id }}/" class="navbar-link">{{ main.user.username }}</a></p>
-								<p class="navbar-text navbar-right"><a href="/users/{{ main.user._id }}/" class="navbar-link" text-decoration="underline"><u>View Profile</u></a></p>
+                <p class="navbar-text navbar-right" style="margin-right:2em">Signed in as: <a href="/{{ main.user._id }}/" class="navbar-link">{{ main.user.username }}</a></p>
+								<p class="navbar-text navbar-right"><a href="/{{ main.user._id }}/" class="navbar-link" text-decoration="underline"><u>View Profile</u></a></p>
             	</div>
 						</div>
 					</div>
@@ -79,7 +79,7 @@
 						<div class="col-md-6">
             	<ul class="nav navbar-nav">
                 	<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-                	<li><a href="/users/{{ main.user._id }}/"><i class="fa fa-user"></i> Profile</a></li>
+                	<li><a href="/{{ main.id }}"><i class="fa fa-user"></i> Profile</a></li>
                 	<li><a href="/availability"><i class="fa fa-calendar-o"></i> Availability</a></li>
                 	<li><a href="/booking"><i class="fa fa-book"></i> Booking</a></li>
            		</ul>
@@ -87,10 +87,10 @@
 						<div class="col-md-6">
 							<div ng-if="!main.loggedIn">
                 	<p class="navbar-text navbar-right" style="margin-right: 0.3em"><a href="/pwResetForgot" class="navbar-link">Forgot Your Password?</a></p>
-                	<p class="navbar-text navbar-right" style="margin-right: 1.2em"><a href="/users/register" class="navbar-link">Register</a></p>
+                	<p class="navbar-text navbar-right" style="margin-right: 1.2em"><a href="/register" class="navbar-link">Register</a></p>
             	</div>
 							<div ng-if="main.loggedIn">
-                <button type="button" class="btn btn-default navbar-btn pull-right" ng-click="main.doLogout()">Logout</button>                
+                <button type="button" class="btn btn-default btn-sm navbar-btn pull-right" ng-click="main.doLogout()">Logout</button>                
             	</div>
 						</div>
 					</div>
