--- a/public/app/views/pages/profile.html
+++ b/public/app/views/pages/profile.html
@@ -20,9 +20,9 @@
         </dl>
 
         <div class="container">
-        	<a class="btn btn-default" href="users/{{ user.userData._id }}/edit">Edit Profile</a>
-        	<a class="btn btn-default" href="users/{{ user.userData._id }}/delete">Delete Account</a>
-        	<a class="btn btn-default" href="bookings/{{ main.user._id }}">Your Bookings</a>
+        	<a class="btn btn-default" href="{{ user.userData._id }}/edit">Edit Profile</a>
+        	<a class="btn btn-default" href="{{ user.userData._id }}/delete">Delete Account</a>
+        	<a class="btn btn-default" href="{{ user.userData._id }}/bookings">Your Bookings</a>
         </div>
       
     </div>
