--- a/public/app/views/pages/userForm.html
+++ b/public/app/views/pages/userForm.html
@@ -62,7 +62,7 @@
 					  	</div>
 					  	<div ng-if="user.type == 'edit'">
 					  		<button type="submit" class="btn btn-success">Save Changes</button>
-					  		<a href="/users/{{ main.user._id }}"><button class="btn btn-default">Cancel</button></a>
+					  		<a href="/{{ user.userData._id }}"><button class="btn btn-default">Cancel</button></a>
 					  	</div>
 					</div>
 				</div>
@@ -78,6 +78,6 @@
 		  	</div>
 		  	<div ng-if="user.type == 'edit'">
 		  		<h3>Changed Saved</h3>	
-		  		<a href="/users/{{ main.user._id }}"><button class="btn btn-default">Profile</button></a>
+		  		<a href="/{{ user.id }}"><button class="btn btn-default">Profile</button></a>
 		  	</div>
 		</div>
