--- a/public/app/views/pages/manageBooking.html
+++ b/public/app/views/pages/manageBooking.html
@@ -23,22 +23,18 @@
 			<th>_id</th>
 			<th>Name</th>
 			<th>Room</th>
-			<th>Date</th>
 			<th>Start Time</th>
 			<th>End Time</th>
-			<th>Equipment</th>
 			<th class="col-sm-2"></th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="booking in booking.bookings">
-			<td>{{ booking._id }}</td>
-			<td>{{ booking.createdBy }}</td>
-			<td>{{ booking.inRoom }}</td>
-			<td>{{ booking.date }}</td>
-			<td>{{ booking.start }}</td>
-			<td>{{ booking.end }}</td>
-			<td>{{ booking.equipment }}</td>
+		<tr ng-repeat="item in booking.bookings track by $index">
+			<td>{{ item._id }}</td>
+			<td>{{ item.createdBy }}</td>
+			<td>{{ item.inRoom }}</td>
+			<td>{{ item.start }}</td>
+			<td>{{ item.end }}</td>
 			<td class="col-sm-2">
 				<a ng-href="/booking/{{ booking._id }}/edit" class="btn btn-danger">Edit</a>
 				<a href="/booking/{{ booking._id }}/delete" class="btn btn-primary">Cancel</a>
