--- a/public/app/views/pages/booking.html
+++ b/public/app/views/pages/booking.html
@@ -20,8 +20,8 @@
         			<div class="form-group">
         				<label for="room">Room</label>
         				<select name="Room" class="form-control" ng-model="booking.bookingData.room">
-        					<option value="1">Room 1</option>
-        					<option value="2">Room 2</option>
+        					<option value="double1">Room 1</option>
+        					<option value="double2">Room 2</option>
         				</select>
         			</div>
 
@@ -42,7 +42,7 @@
 
         			<div class="form-group">
         				<label for="equip">Additional Equipment</label>
-        				<select name="Room" class="form-control" ng-model="booking.bookingData.equip">
+        				<select name="Equipment" class="form-control" ng-model="booking.bookingData.equip">
         					<option value="1">1</option>
         					<option value="2">2</option>
         				</select>
