--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -13,7 +13,7 @@
 	<div class="row" align="center">
 	  <div class="col-xs-6">
 	  	<a href="/availability" type="button" class="btn btn-block btn-default btn-lg">Availability</a>
-	  	<a href="/booking" type="button" class="btn btn-block btn-default btn-lg">Booking</a>
+	  	<a href="/bookings" type="button" class="btn btn-block btn-default btn-lg">Booking</a>
 	  </div>
 	  <div class="col-xs-6">
 			<a href="/admin" type="button" class="btn btn-block btn-default btn-lg">Administrator</a>
