admin create button now working

--- a/public/app/views/pages/manageBooking.html
+++ b/public/app/views/pages/manageBooking.html
@@ -3,7 +3,7 @@
 <div class="page-header">
 	<h1>
 		Bookings Page 
-		<a href="/booking" class="btn btn-default">
+		<a href="/bookings" class="btn btn-default">
 			<span class="glyphicon glyphicon-plus"></span> 
 			New Booking
 		</a>
