booking routing changes

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -85,7 +85,7 @@
                 	<li><a href="/"><i class="fa fa-home"></i> Home</a></li>
                 	<li><a href="/{{ main.id }}"><i class="fa fa-user"></i> Profile</a></li>
                 	<li><a href="/availability"><i class="fa fa-calendar-o"></i> Availability</a></li>
-                	<li><a href="/bookings"><i class="fa fa-book"></i> Booking</a></li>
+                	<li><a href="/bookings/create"><i class="fa fa-book"></i> Booking</a></li>
            		</ul>
 
 			</div>
