--- a/public/app/views/pages/booking.html
+++ b/public/app/views/pages/booking.html
@@ -32,12 +32,12 @@
 
         			<div class="form-group">
         				<label for="start">Start Time</label>
-        				<input type="time" class="form-control" ng-model="booking.bookingData.start">
+        				<input type="time" min="0" max="30" step="1800" class="form-control" ng-model="booking.bookingData.start">
         			</div>
 
         			<div class="form-group">
         				<label for="end">End Time</label>
-        				<input type="time" class="form-control" ng-model="booking.bookingData.end">
+        				<input type="time" min="0" max="30" step="1800" class="form-control" ng-model="booking.bookingData.end">
         			</div>
 
         			<div class="form-group">
