--- a/public/app/views/pages/booking.html
+++ b/public/app/views/pages/booking.html
@@ -20,8 +20,7 @@
         			<div class="form-group">
         				<label for="room">Room</label>
         				<select name="Room" class="form-control" ng-model="booking.bookingData.room">
-        					<option value="double1">Room 1</option>
-        					<option value="double2">Room 2</option>
+        					<option ng-repeat="room in booking.rooms | filter: {available: true}" value="{{room.name}}">{{room.name}} [Capacity: {{room.capacity}}]</option>
         				</select>
         			</div>
 
