logout rerouting, fixed login changing user problem

--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -23,7 +23,7 @@
     				<select name="Room" class="form-control" ng-model="booking.bookingData.room">
     					<option value="double1">Room 1</option>
     					<option value="double2">Room 2</option>
-    				</select>git 
+    				</select>
     			</div>
 
     			<div class="form-group">
