--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -8,6 +8,7 @@
     <form ng-submit="booking.saveBooking()">
         <div class="row">
     		<div class="col-sm-6">
+
     			<div class="form-group">
     				<label for="people">Number of People</label>
     				<select name="Number of People" class="form-control" ng-model="booking.bookingData.people">
@@ -15,13 +16,22 @@
     					<option value="2">2</option>
     					<option value="3">3</option>
     					<option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
     				</select>
     			</div>
 
     			<div class="form-group">
     				<label for="room">Room</label>
     				<select name="Room" class="form-control" ng-model="booking.bookingData.room">
-        				<option ng-repeat="room in booking.rooms | filter: {available: true}" value="{{room.name}}">{{room.name}} [Capacity: {{room.capacity}}]</option>
+        				<option ng-repeat="room in booking.rooms" value="{{room.name}}">{{room.name}} [Capacity: {{room.capacity}}]</option>
+                        <!--  | filter: {available: true} -->
         			</select>
     			</div>
 
@@ -41,12 +51,20 @@
     			</div>
 
     			<div class="form-group">
-    				<label for="equip">Additional Equipment</label>
-    				<select name="Equipment" class="form-control" ng-model="booking.bookingData.equip">
+    				<label for="equip">iPads</label>
+    				<select name="iPad" class="form-control" ng-model="booking.bookingData.iPad">
     					<option value="1">1</option>
     					<option value="2">2</option>
     				</select>
     			</div>
+
+                <div class="form-group">
+                    <label for="equip">Mics</label>
+                    <select name="mic" class="form-control" ng-model="booking.bookingData.mic">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                    </select>
+                </div>
 
 
                 <div class="container">
