--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -29,9 +29,7 @@
 
     			<div class="form-group">
     				<label for="room">Room</label>
-    				<select name="Room" class="form-control" ng-model="booking.bookingData.room">
-        				<option ng-repeat="room in booking.rooms" value="{{room.name}}">{{room.name}} [Capacity: {{room.capacity}}]</option>
-                        <!--  | filter: {available: true} -->
+    				<select name="Room" class="form-control" ng-model="booking.bookingData.roomSelected" ng-options="room.name for room in booking.rooms | filter: {visible: true}">
         			</select>
     			</div>
 
