slight changes in booking and forms

--- a/public/app/views/pages/userForm.html
+++ b/public/app/views/pages/userForm.html
@@ -77,7 +77,7 @@
   		<a href="/login"><button class="btn btn-default">Login</button></a>
   	</div>
   	<div ng-if="user.type == 'edit'">
-  		<h3>Changed Saved</h3>	
+  		<h3>Changes Saved</h3>	
   		<a href="/{{ user.id }}"><button class="btn btn-default">Profile</button></a>
   	</div>
 </div>
