--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -29,7 +29,7 @@
 
     			<div class="form-group">
     				<label for="room">Room</label>
-    				<select name="Room" class="form-control" ng-model="booking.bookingData.roomSelected" ng-options="room.name for room in booking.rooms | filter: {visible: true}">
+    				<select name="Room" class="form-control" ng-model="booking.bookingData.roomSelected" ng-options="(room.name + ' [Capacity: ' + room.capacity + ' ]')  for room in booking.rooms | filter: {visible: true}">
         			</select>
     			</div>
 
@@ -95,6 +95,6 @@
     </div>
     <div ng-if="booking.type == 'edit'">
         <h3>Changes Saved</h3>  
-        <a href="/{{ user.id }}"><button class="btn btn-default">Profile</button></a>
+        <a href="/"><button class="btn btn-default">Home</button></a>
     </div>
 </div>
