changed page redirections

--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -95,6 +95,6 @@
     </div>
     <div ng-if="booking.type == 'edit'">
         <h3>Changes Saved</h3>  
-        <a href="/"><button class="btn btn-default">Home</button></a>
+        <a href="/{{ booking.user_id }}/bookings "><button class="btn btn-default">Back to Bookings</button></a>
     </div>
 </div>
