--- a/public/app/views/pages/deleteBooking.html
+++ b/public/app/views/pages/deleteBooking.html
@@ -14,7 +14,7 @@
 	<div class="container" ng-if="booking.deleted">
 		<h3>Booking Successfully Deleted</h3>
 		</br>
-		<a href="/"><button class="btn btn-default">Go Home</button></a>
+		<a href="/{{ booking.user_id }}/bookings "><button class="btn btn-default">Back to Bookings</button></a>
 	</div>
 
 </div>
