--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -35,7 +35,7 @@
 
     			<div class="form-group">
     				<label for="date">Date</label>
-    				<input type="date" min="2015-07-07"class="form-control" ng-model="booking.bookingData.date">
+    				<input type="date" min="{{booking.date | date: 'yyyy-MM-dd'}}"class="form-control" ng-model="booking.bookingData.date">
     			</div>
 
     			<div class="form-group">
