--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -40,13 +40,14 @@
     <script src="app/controllers/contactCtrl.js"></script>
     <script src="app/controllers/bookingCtrl.js"></script>
     <script src="app/controllers/userCtrl.js"></script>
+    <script src="app/controllers/availabilityCtrl.js"></script>
 
     <!-- services -->
     <script src="app/services/userService.js"></script>
     <script src="app/services/authService.js"></script>
     <script src="app/services/bookingService.js"></script>
     <script src="app/services/roomService.js"></script>
-
+    <script src="app/services/availService.js"></script>
     <!-- main Angular app files -->
     <script src="app/app.routes.js"></script>
     <script src="app/app.js"></script>
