--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -51,6 +51,7 @@
     			<div class="form-group">
     				<label for="equip">iPads</label>
     				<select name="iPad" class="form-control" ng-model="booking.bookingData.iPad">
+                        <option value="0">0</option>
     					<option value="1">1</option>
     					<option value="2">2</option>
     				</select>
@@ -59,6 +60,7 @@
                 <div class="form-group">
                     <label for="equip">Mics</label>
                     <select name="mic" class="form-control" ng-model="booking.bookingData.mic">
+                        <option value="0">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                     </select>
