--- a/public/app/views/pages/availability.html
+++ b/public/app/views/pages/availability.html
@@ -1,4 +1,7 @@
 <!-- availability.html -->
+<head>
+<link rel="stylesheet" type="text/css" href="main.css">
+</head>
 <div class="page-header">
   <h1>Availability</h1>
 </div>
@@ -26,11 +29,11 @@
   </thead>
   <tbody>
     <tr ng-repeat="time in ['14:00', '14:30', '15:00', '15:30', '16:00', '16:30', '17:00', '17:30', '18:00', '18:30', '19:00', '19:30', '20:00', '20:30', '21:00', '21:30', '22:00', '22:30', '23:00', '23:30', '00:00', '00:30', '01:00', '01:30']">
-      <td>{{ time }}</td>
-      <td ng-repeat="booklist in availability.bookings">
+      <td id="nopad">{{ time }}</td>
+      <td ng-repeat="booklist in availability.bookings" id="nopad">
         <div ng-repeat="singlebook in booklist.bookings">
-          <div ng-if="!availability.isAvailable(singlebook, time)" style="background: #ff0000">X</div>
-          <div ng-if="availability.isAvailable(singlebook, time)">LINK</div>
+          <div ng-if="!availability.isAvailable(singlebook, time)" style="background-color: #ff0000; text-align: center">X</div>
+          <div ng-if="availability.isAvailable(singlebook, time)" onclick="location.href='/bookings/create';" id="mouseover">LINK</div>
         </div>
       </td>
     </tr>
